--- a/1.creazione_CSV.ipynb
+++ b/1.creazione_CSV.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# In questo notebook vengono puliti i dati e creati i file CSV\n",
     "\n",
-    "###  In this notebook we will clean all the data and put it at on place in sql file. \n",
-    "    Structure of sql file.\n",
-    "        -- jokes\n",
-    "        -- ratings\n",
-    "        \n",
-    "    We have jokes html file and ratings csv file. We will extract the joke and put it into sql data base as jokes table\n",
-    "    We will put all the ratings into ratings table\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    Cleaning HTML file to extract joke data!"
+    "Si hanno le barzellette in file HTML e i rating degli utenti rispetto alle barezelle in file CSV, si puliscono i dati e si mettono dentro due CSV.\n"
    ]
   },
   {
@@ -27,12 +15,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import delle librerie necessarie\n",
     "import re\n",
     "import os\n",
     "import codecs\n",
     "import pandas as pd\n",
     "import html2text\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creazione CVS delle barzellette"
    ]
   },
   {
@@ -60,9 +56,9 @@
     "data = codecs.open('data/raw/jokes/' + file, 'r', encoding=\"cp1252\")\n",
     "joke_html = data.read()\n",
     "\n",
-    "# Extracting joke\n",
+    "# estrazione delle barzellette\n",
     "joke = html2text.html2text(joke_html)\n",
-    "# Extracting joke_id\n",
+    "# estrazione dell'id delle barzellette\n",
     "joke_id = int(file.split('init')[1].split('.html')[0])\n",
     "\n",
     "print(joke_id)\n",
@@ -75,7 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating a method that input the location of html file and output joke \n",
+    "# creazione di una funzione che prende in input la location dei file html (barzellette)\n",
+    "# e restituisce una coppia <id_barzelletta, barzelletta>\n",
     "def joke_extractor(file):\n",
     "    data = codecs.open(file, 'r', encoding=\"cp1252\")\n",
     "    joke_html = data.read()\n",
@@ -117,28 +114,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>95</td>\n",
-       "      <td>\\n  \\nJust a thought ..\\n\\nBefore criticizin...</td>\n",
+       "      <td>42</td>\n",
+       "      <td>|  \\n\\n  \\nTwo men are discussing the age old ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>\\nA man visits the doctor. The doctor says \"...</td>\n",
+       "      <td>19</td>\n",
+       "      <td>|  \\n\\n  \\nQ: If a person who speaks three lan...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>83</td>\n",
-       "      <td>\\n_What a woman says_ :  \\n\"This place is a ...</td>\n",
+       "      <td>88</td>\n",
+       "      <td>\\n  \\nA Czechoslovakian man felt his eyesigh...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>17</td>\n",
-       "      <td>|  \\n\\n  \\nHow many men does it take to screw ...</td>\n",
+       "      <td>93</td>\n",
+       "      <td>\\n  \\nReaching the end of a job interview, t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>40</td>\n",
-       "      <td>|  \\n\\n  \\nHow many Irishmen does it take to c...</td>\n",
+       "      <td>52</td>\n",
+       "      <td>|  \\n\\n  \\nQ: What do Monica Lewinsky and Bob ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -146,11 +143,11 @@
       ],
       "text/plain": [
        "   joke_id                                               joke\n",
-       "0       95    \\n  \\nJust a thought ..\\n\\nBefore criticizin...\n",
-       "1        1    \\nA man visits the doctor. The doctor says \"...\n",
-       "2       83    \\n_What a woman says_ :  \\n\"This place is a ...\n",
-       "3       17  |  \\n\\n  \\nHow many men does it take to screw ...\n",
-       "4       40  |  \\n\\n  \\nHow many Irishmen does it take to c..."
+       "0       42  |  \\n\\n  \\nTwo men are discussing the age old ...\n",
+       "1       19  |  \\n\\n  \\nQ: If a person who speaks three lan...\n",
+       "2       88    \\n  \\nA Czechoslovakian man felt his eyesigh...\n",
+       "3       93    \\n  \\nReaching the end of a job interview, t...\n",
+       "4       52  |  \\n\\n  \\nQ: What do Monica Lewinsky and Bob ..."
       ]
      },
      "execution_count": 4,
@@ -159,6 +156,7 @@
     }
    ],
    "source": [
+    "# si utilizza la funzione definita sopra per estrarre barzelletta ed id\n",
     "files = os.listdir('data/raw/jokes')\n",
     "jokes_list = [joke_extractor('data/raw/jokes/'+ file) for file in files if file.endswith('.html') ]\n",
     "df = pd.DataFrame(jokes_list, columns=['joke_id', 'joke'])\n",
@@ -171,6 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# si scrivono le barzellette e i relativi id su un CSV\n",
     "df.to_csv('data/jokes.csv', index = None)"
    ]
   },
@@ -178,8 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Saving ratings data into sql table !!\n",
-    "-------------------------------------------------"
+    "## Creazione CSV con i rating degli utenti"
    ]
   },
   {
@@ -190,45 +188,16 @@
    "source": [
     "dataframe = pd.DataFrame()\n",
     "\n",
+    "# si leggono i rating degli utenti\n",
     "df1 = pd.read_excel('data/raw/jester-data-1.xls', header = None) \n",
-    "#df2 = pd.read_excel('data/raw/jester-data-2.xls', header = None) \n",
-    "#df3 = pd.read_excel('data/raw/jester-data-3.xls', header = None) \n",
+    "# df2 = pd.read_excel('data/raw/jester-data-2.xls', header = None) \n",
+    "# df3 = pd.read_excel('data/raw/jester-data-3.xls', header = None) \n",
     "dataframe =  pd.concat([df1], axis=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,\n",
-       "            ...\n",
-       "             91,  92,  93,  94,  95,  96,  97,  98,  99, 100],\n",
-       "           dtype='int64', length=101)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataframe.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    Since ratings have no user name or any user identification tag, we we give them user id "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -426,12 +395,13 @@
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# si assegna ad ogni utente un identificatore\n",
     "user_id = np.linspace(1, len(dataframe), len(dataframe))\n",
     "dataframe.insert(0, 'user_id', user_id)\n",
     "dataframe = dataframe.rename({0: 'number_of_jokes_rated'}, axis='columns')\n",
@@ -442,29 +412,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Also saving a copy of data into csv format !"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe.to_csv('data/jester_jokes_rating.csv', index = None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-----------------------------------------------\n",
-    "                                                        END\n",
-    "\n",
-    "-----------------------------------"
+    "# si scrivono i rating degli utenti su un CSV\n",
+    "dataframe.to_csv('data/jester_jokes_ratings.csv', index = None)"
    ]
   }
  ],
@@ -484,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
