--- a/2.pre-processing.ipynb
+++ b/2.pre-processing.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Preprocessing\n",
-    "\n",
-    "    In this notebook we will be doing data pre-processing. Before applying user user collaborative filtering, it's a recommended step to normalize the data, In this notebook we will be normalizing all the records and save it into sql database. \n",
-    "    \n",
-    "    Normalization step have high complexity and takes lot of time to compute! So we will save the data into sql database\n"
+    "# Pre-processing dei dati"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Necessary imports"
+    "In questo notebook vengono normalizzati i dati, in particolare ai rating di ogni utente gli viene sottratto il rating medio dell'utente stesso, così da rendere gli utenti confrontabili."
    ]
   },
   {
@@ -24,14 +20,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import delle librerie necessarie\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -228,13 +227,13 @@
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings_df = pd.read_csv('./data/jester_jokes_rating.csv')\n",
+    "ratings_df = pd.read_csv('./data/jester_jokes_ratings.csv')\n",
     "ratings_df.head()"
    ]
   },
@@ -242,17 +241,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 1 : Normalization of rating around zero mean\n",
-    "\n",
-    "Adjusting each user's rating vector by subtracting user's mean rating from each of there ratings(This corrects for the fact that some thinks that 5 star is anything worth seeing and other thinks 3 star is good enough)\n",
-    "\n",
-    "Normalizing the ratings around 0 means that the ratings get a positive or negative feel\n",
-    "to them."
+    "## Esempio di normalizzazione con 10 utenti e 8 barzellette"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -374,21 +368,20 @@
        "4    1.60    7.04    4.61  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# We will be using small set of data to monitor each step and later create a method \n",
-    "# r_df is subset of rating_df ! here we will only take 10 users and 8 jokes\n",
+    "# si prendono 10 rating e 8 barzellette\n",
     "r_df = ratings_df.iloc[0:10, 0:10]\n",
     "r_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -585,21 +578,23 @@
        "9    5.15    8.93    2.52  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Since 99 represents null value, We will replace it with blank for joke_1 column\n",
+    "# visto che 99 indica che il rating non è presente, si sostisce 99 con NaN\n",
     "r_df['joke_1'] = r_df['joke_1'].replace([99],np.nan)\n",
     "r_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -615,18 +610,26 @@
        "Name: 1, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# si sottrae ad ogni barzelletta valutata dall'utente con id == 1 il relativo rating medio\n",
     "r_df.iloc[1, 2:] - np.mean(r_df.iloc[1, 2:])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normalizzazione di tutti i rating degli utenti"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -637,62 +640,41 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Selecting all joke columns\n",
-    "joke_columns = r_df.columns[2:] # joke column starts from second column\n",
+    "# si selezionano tutte le colonne delle barzellette\n",
+    "joke_columns = r_df.columns[2:] # le barzellette iniziano dalla seconda colonna\n",
     "joke_columns"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Creating the method for normalization as learnt in the tutorial above!"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replacing 99 with nan value\n",
+    "# si creano le funzioni per fare la normalizzazione come mostrato sopra\n",
+    "\n",
+    "# funzione per sostituire i rating con valore 99 con NaN\n",
     "def replace_99(ratings):\n",
-    "    '''\n",
-    "    Replace 99 with nan for user's rating value\n",
-    "    step 1: select joke columns\n",
-    "    step 2: replace 99 with np.nan for all columns\n",
-    "    \n",
-    "    '''\n",
     "    joke_ids = ratings.columns[2:]    \n",
     "    for joke_id in joke_ids: \n",
     "        ratings[joke_id] = ratings[joke_id].replace([99],np.nan)\n",
     "    return ratings\n",
     "\n",
-    "# Now creating a function that takes all the raw data as input and complete step 1 \n",
+    "# funzione per normalizzare i rating degli utenti\n",
     "def normalization(ratings):\n",
-    "    ''' \n",
-    "    Returns mean subtracted user's rating value\n",
-    "    step 1: subtract user's rating by their mean value for each row \n",
-    "    '''\n",
     "    total_users = ratings.shape[0]\n",
     "    for i in range(total_users):\n",
     "        ratings.iloc[i, 2:] = ratings.iloc[i, 2:] - np.mean(ratings.iloc[i, 2:])\n",
     "    return ratings\n",
     "\n",
-    "# replacing nan with 0\n",
+    "# si sostituiscono i NaN con 0\n",
     "def replace_0(ratings):\n",
-    "    '''\n",
-    "    Replace nan with 0 for user's rating value\n",
-    "    step 1: select joke columns\n",
-    "    step 2: replace np.nan with 0 for all columns\n",
-    "    \n",
-    "    '''\n",
     "    joke_ids = ratings.columns[2:]    \n",
     "    for joke_id in joke_ids: \n",
     "        ratings[joke_id] = ratings[joke_id].replace([np.nan],0)\n",
@@ -701,152 +683,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>number_of_jokes_rated</th>\n",
-       "      <th>joke_1</th>\n",
-       "      <th>joke_2</th>\n",
-       "      <th>joke_3</th>\n",
-       "      <th>joke_4</th>\n",
-       "      <th>joke_5</th>\n",
-       "      <th>joke_6</th>\n",
-       "      <th>joke_7</th>\n",
-       "      <th>joke_8</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>74</td>\n",
-       "      <td>-3.001250e+00</td>\n",
-       "      <td>1.360875e+01</td>\n",
-       "      <td>-4.841250e+00</td>\n",
-       "      <td>-3.341250e+00</td>\n",
-       "      <td>-2.70125</td>\n",
-       "      <td>-3.68125</td>\n",
-       "      <td>-5.03125</td>\n",
-       "      <td>8.98875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>100</td>\n",
-       "      <td>4.528750e+00</td>\n",
-       "      <td>1.587500e-01</td>\n",
-       "      <td>6.808750e+00</td>\n",
-       "      <td>4.818750e+00</td>\n",
-       "      <td>-1.93125</td>\n",
-       "      <td>-9.21125</td>\n",
-       "      <td>-0.28125</td>\n",
-       "      <td>-4.89125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>49</td>\n",
-       "      <td>-4.440892e-16</td>\n",
-       "      <td>-4.440892e-16</td>\n",
-       "      <td>-4.440892e-16</td>\n",
-       "      <td>-4.440892e-16</td>\n",
-       "      <td>-0.12000</td>\n",
-       "      <td>0.12000</td>\n",
-       "      <td>-0.12000</td>\n",
-       "      <td>0.12000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>48</td>\n",
-       "      <td>4.440892e-16</td>\n",
-       "      <td>4.010000e+00</td>\n",
-       "      <td>4.440892e-16</td>\n",
-       "      <td>4.440892e-16</td>\n",
-       "      <td>-2.54000</td>\n",
-       "      <td>3.82000</td>\n",
-       "      <td>-7.16000</td>\n",
-       "      <td>1.87000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>91</td>\n",
-       "      <td>6.230000e+00</td>\n",
-       "      <td>2.340000e+00</td>\n",
-       "      <td>-6.440000e+00</td>\n",
-       "      <td>-7.660000e+00</td>\n",
-       "      <td>-0.91000</td>\n",
-       "      <td>-0.67000</td>\n",
-       "      <td>4.77000</td>\n",
-       "      <td>2.34000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   user_id  number_of_jokes_rated        joke_1        joke_2        joke_3  \\\n",
-       "0        1                     74 -3.001250e+00  1.360875e+01 -4.841250e+00   \n",
-       "1        2                    100  4.528750e+00  1.587500e-01  6.808750e+00   \n",
-       "2        3                     49 -4.440892e-16 -4.440892e-16 -4.440892e-16   \n",
-       "3        4                     48  4.440892e-16  4.010000e+00  4.440892e-16   \n",
-       "4        5                     91  6.230000e+00  2.340000e+00 -6.440000e+00   \n",
-       "\n",
-       "         joke_4   joke_5   joke_6   joke_7   joke_8  \n",
-       "0 -3.341250e+00 -2.70125 -3.68125 -5.03125  8.98875  \n",
-       "1  4.818750e+00 -1.93125 -9.21125 -0.28125 -4.89125  \n",
-       "2 -4.440892e-16 -0.12000  0.12000 -0.12000  0.12000  \n",
-       "3  4.440892e-16 -2.54000  3.82000 -7.16000  1.87000  \n",
-       "4 -7.660000e+00 -0.91000 -0.67000  4.77000  2.34000  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Here Spark will be better choce that\n",
-    "temp1 = replace_99(r_df)\n",
-    "temp2 = normalization(temp1)\n",
-    "temp3 = replace_0(temp2)\n",
-    "temp3.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Now transformation of rating data for into normalized ratings for all the ratings! "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1043,13 +883,13 @@
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# we will normalize and save into normalized_ratings dataframe!\n",
+    "# normalizzazione di tutti i rating con le funzioni sopra definite\n",
     "normalized_ratings = replace_99(ratings_df)\n",
     "normalized_ratings = normalization(normalized_ratings)\n",
     "normalized_ratings = replace_0(normalized_ratings)\n",
@@ -1058,104 +898,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "normalized_ratings.to_csv('data/normalized_ratings.csv', index = None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Finding similarity: \n",
-    "We will be using pearson correlation as similarity measure !"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings_of_active_user = temp3.iloc[6, 2:]\n",
-    "ratings_of_other_user = temp3.iloc[7, 2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# note probably use list and assert that x and y are list!\n",
-    "# since we are using normalized data, we won't subtract by mean value again\n",
-    "def weight_factor(x, y):\n",
-    "    ''' \n",
-    "    Weight factor implies relationship between user x and user y\n",
-    "    Also know as similarity between user x and user y\n",
-    "    We are using Pearson correlation coefficient here. \n",
-    "    '''    \n",
-    "    t1, t2, t3 = 0, 0, 0 \n",
-    "    for i, j in zip(x, y):\n",
-    "        t1+=i*j\n",
-    "        t2+=i*i\n",
-    "        t3+=j*j\n",
-    "    return t1/(np.sqrt(t2) * np.sqrt(t3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    Testing out similarity "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.0,\n",
-       " -0.23803270911260682,\n",
-       " 0.34567259955147395,\n",
-       " 0.5542047700379624,\n",
-       " 0.2889392861822395,\n",
-       " 0.398903352140551,\n",
-       " 0.20967057910055695,\n",
-       " -0.02048043694563569,\n",
-       " 0.017735643966224027,\n",
-       " -0.3068296372701195]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# now our active user is suppose user_id 1!\n",
-    "# we want to find similarity with other users!\n",
-    "\n",
-    "# x represent active user\n",
-    "# y represents other user\n",
-    "x =  temp3.iloc[0, 2:]\n",
-    "similarity = [weight_factor(x, temp3.iloc[i, 2:]) for i in range(temp3.shape[0])]\n",
-    "similarity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----------------------------------------------------------------\n",
-    "                                        END\n",
-    "                                        \n",
-    "-----------------------------------------------------------------"
    ]
   }
  ],
@@ -1175,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
