fatte alcune modifiche sui notebook precedenti, in particolare i joke non votati sono salvati con Nan in modo da fare un controllo sugli item co-rated. Aggiunto Notebook nuovo, funziona fino alla cella 7

--- a/2.pre-processing.ipynb
+++ b/2.pre-processing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -227,7 +227,7 @@
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "4    1.60    7.04    4.61  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "9    5.15    8.93    2.52  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -610,7 +610,7 @@
        "Name: 1, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -747,15 +747,15 @@
        "      <td>7.601892</td>\n",
        "      <td>...</td>\n",
        "      <td>6.251892</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>-2.198108</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -785,49 +785,49 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>49</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.930612</td>\n",
        "      <td>2.170612</td>\n",
        "      <td>1.930612</td>\n",
        "      <td>2.170612</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.980612</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>48</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>5.691875</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>-0.858125</td>\n",
        "      <td>5.501875</td>\n",
        "      <td>-5.478125</td>\n",
        "      <td>3.551875</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>-2.128125</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -862,28 +862,28 @@
        "   user_id  number_of_jokes_rated    joke_1     joke_2    joke_3    joke_4  \\\n",
        "0        1                     74 -4.388108  12.221892 -6.228108 -4.728108   \n",
        "1        2                    100  1.333700  -3.036300  3.613700  1.623700   \n",
-       "2        3                     49  0.000000   0.000000  0.000000  0.000000   \n",
-       "3        4                     48  0.000000   5.691875  0.000000  0.000000   \n",
+       "2        3                     49       NaN        NaN       NaN       NaN   \n",
+       "3        4                     48       NaN   5.691875       NaN       NaN   \n",
        "4        5                     91  5.247363   1.357363 -7.422637 -8.642637   \n",
        "\n",
        "     joke_5     joke_6    joke_7    joke_8  ...   joke_91   joke_92   joke_93  \\\n",
-       "0 -4.088108  -5.068108 -6.418108  7.601892  ...  6.251892  0.000000  0.000000   \n",
+       "0 -4.088108  -5.068108 -6.418108  7.601892  ...  6.251892       NaN       NaN   \n",
        "1 -5.126300 -12.406300 -3.476300 -8.086300  ...  0.073700 -7.696300 -3.036300   \n",
-       "2  1.930612   2.170612  1.930612  2.170612  ...  0.000000  0.000000  0.000000   \n",
-       "3 -0.858125   5.501875 -5.478125  3.551875  ...  0.000000  0.000000  0.000000   \n",
+       "2  1.930612   2.170612  1.930612  2.170612  ...       NaN       NaN       NaN   \n",
+       "3 -0.858125   5.501875 -5.478125  3.551875  ...       NaN       NaN       NaN   \n",
        "4 -1.892637  -1.652637  3.787363  1.357363  ...  1.937363  2.327363  1.017363   \n",
        "\n",
        "    joke_94   joke_95   joke_96   joke_97   joke_98   joke_99       100  \n",
-       "0  0.000000  0.000000  0.000000 -2.198108  0.000000  0.000000  0.000000  \n",
+       "0       NaN       NaN       NaN -2.198108       NaN       NaN       NaN  \n",
        "1  5.113700 -2.936300 -4.886300  0.313700 -2.406300 -7.066300 -1.676300  \n",
-       "2  1.980612  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "3 -2.128125  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
+       "2  1.980612       NaN       NaN       NaN       NaN       NaN       NaN  \n",
+       "3 -2.128125       NaN       NaN       NaN       NaN       NaN       NaN  \n",
        "4  1.937363  2.477363 -1.702637 -0.142637  3.297363 -1.452637 -1.652637  \n",
        "\n",
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,13 +892,13 @@
     "# normalizzazione di tutti i rating con le funzioni sopra definite\n",
     "normalized_ratings = replace_99(ratings_df)\n",
     "normalized_ratings = normalization(normalized_ratings)\n",
-    "normalized_ratings = replace_0(normalized_ratings)\n",
+    "# LASCIAMO I NAN\n",
     "normalized_ratings.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
