--- a/1.creazione_CSV.ipynb
+++ b/1.creazione_CSV.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,28 +114,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>42</td>\n",
-       "      <td>|  \\n\\n  \\nTwo men are discussing the age old ...</td>\n",
+       "      <td>95</td>\n",
+       "      <td>\\n  \\nJust a thought ..\\n\\nBefore criticizin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19</td>\n",
-       "      <td>|  \\n\\n  \\nQ: If a person who speaks three lan...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>\\nA man visits the doctor. The doctor says \"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>88</td>\n",
-       "      <td>\\n  \\nA Czechoslovakian man felt his eyesigh...</td>\n",
+       "      <td>83</td>\n",
+       "      <td>\\n_What a woman says_ :  \\n\"This place is a ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>93</td>\n",
-       "      <td>\\n  \\nReaching the end of a job interview, t...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>|  \\n\\n  \\nHow many men does it take to screw ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>52</td>\n",
-       "      <td>|  \\n\\n  \\nQ: What do Monica Lewinsky and Bob ...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>|  \\n\\n  \\nHow many Irishmen does it take to c...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -143,14 +143,14 @@
       ],
       "text/plain": [
        "   joke_id                                               joke\n",
-       "0       42  |  \\n\\n  \\nTwo men are discussing the age old ...\n",
-       "1       19  |  \\n\\n  \\nQ: If a person who speaks three lan...\n",
-       "2       88    \\n  \\nA Czechoslovakian man felt his eyesigh...\n",
-       "3       93    \\n  \\nReaching the end of a job interview, t...\n",
-       "4       52  |  \\n\\n  \\nQ: What do Monica Lewinsky and Bob ..."
+       "0       95    \\n  \\nJust a thought ..\\n\\nBefore criticizin...\n",
+       "1        1    \\nA man visits the doctor. The doctor says \"...\n",
+       "2       83    \\n_What a woman says_ :  \\n\"This place is a ...\n",
+       "3       17  |  \\n\\n  \\nHow many men does it take to screw ...\n",
+       "4       40  |  \\n\\n  \\nHow many Irishmen does it take to c..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "      <th>joke_97</th>\n",
        "      <th>joke_98</th>\n",
        "      <th>joke_99</th>\n",
-       "      <th>100</th>\n",
+       "      <th>joke_100</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -385,17 +385,17 @@
        "3    8.16   -2.82    6.21  ...    99.00    99.00    99.00     0.53    99.00   \n",
        "4    1.60    7.04    4.61  ...     5.19     5.58     4.27     5.19     5.73   \n",
        "\n",
-       "   joke_96  joke_97  joke_98  joke_99    100  \n",
-       "0    99.00    -5.63    99.00    99.00  99.00  \n",
-       "1    -2.14     3.06     0.34    -4.32   1.07  \n",
-       "2    99.00    99.00    99.00    99.00  99.00  \n",
-       "3    99.00    99.00    99.00    99.00  99.00  \n",
-       "4     1.55     3.11     6.55     1.80   1.60  \n",
+       "   joke_96  joke_97  joke_98  joke_99  joke_100  \n",
+       "0    99.00    -5.63    99.00    99.00     99.00  \n",
+       "1    -2.14     3.06     0.34    -4.32      1.07  \n",
+       "2    99.00    99.00    99.00    99.00     99.00  \n",
+       "3    99.00    99.00    99.00    99.00     99.00  \n",
+       "4     1.55     3.11     6.55     1.80      1.60  \n",
        "\n",
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,8 @@
     "user_id = np.linspace(1, len(dataframe), len(dataframe))\n",
     "dataframe.insert(0, 'user_id', user_id)\n",
     "dataframe = dataframe.rename({0: 'number_of_jokes_rated'}, axis='columns')\n",
-    "for i in range(1, 100):\n",
+    "# AVEVAMO SBAGLIATO PRIMA C'ERA 100 E L'ULTIMA COLONNA VENIVA 100 INVECE DI joke_100\n",
+    "for i in range(1, 101):\n",
     "    dataframe = dataframe.rename({i: 'joke_'+str(i)}, axis='columns')\n",
     "dataframe = dataframe.astype({\"user_id\": int})\n",
     "dataframe.head()"
@@ -438,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
